adding simulator component

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -14,4 +14,13 @@
             </div>
         </div>
     </div>
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Fantasy Golf Simulator</h5>
+                <p class="card-text">Run Monte Carlo simulations to predict fantasy golf scoring based on player statistics and tournament conditions.</p>
+                <a href="/fantasy-golf" class="btn btn-success">Go to Fantasy Golf</a>
+            </div>
+        </div>
+    </div>
 </div>
