--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fantasy-golf">
+                <span class="oi oi-target" aria-hidden="true"></span> Fantasy Golf
+            </NavLink>
+        </li>
     </ul>
 </div>
 
