--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using GolfStatsApp.Shared.Models
 @using GolfStatsApp.Client
 @using GolfStatsApp.Client.Shared
 @using GolfStatsApp.Shared
